fix overflows

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -7,6 +7,7 @@
     box-shadow: inset 0px 24px 11px -26px rgba(0,0,0,0.75);
     background: teal;
     color: #ddd;
+    overflow: auto;
 
     .nav-item {
       white-space: nowrap;
